Jakarta Commons Transaction Release 1.1 beta1
---------------------------------------------

RELEASE NUMBER: 1.1b1
RELEASE TAG / BRANCH: TRANSACTION_1_1_B1_RELEASE / none yet

DESCRIPTION
-----------

Commons Transaction aims at providing utility classes commonly used in 
transactional Java programming. 

There are implementations for:
- multi level (e.g. read/write) locks, 
- transactional maps, and
- transactional file access, plus
- some helper classes 

GENERAL RELEASE NOTES
---------------------

This is the first beta of the Commons Transaction 1.1 feature release. 

Commons Transaction 1.1 aims at polishing (interface) oddities, improve 
locking and make the file store more flexible.

ENHANCEMENTS FROM 1.0
---------------------

- Extended and less excentric lock manager
- Deadlock detection for all lock managers, file store, and pessimistic map
- Flexible preference mechanism 


NEW FEATURES FROM 1.0
---------------------

- new ReadWriteLockManager for most intuitive read/write lock usage
- new read/write/upgrade locking mechanism

MINOR INCOMPATIBILITIES TO 1.0
-----------------------------------------

- PessimisticMapWrapper now throws the more general LockException from locking package

BUGFIXES FROM 1.0
-----------------


KNOWN ISSUES
------------

none